# stable-diffusion-rs

./: .gitignore  COMPARISON_ANALYSIS.md  Cargo.toml  FIXES_APPLIED.md  IMPLEMENTATION_COMPLETE.md  README.md  UNDERSTANDING_DIFFUSION.md  WEIGHTS.md  compare_implementations.sh  debug_compare.md  debug_findings.md  debug_unet_comparison.md  download_weights.sh  plan.md
docs/: memory_layout.md
examples/: clip_io_demo.rs  compare_noise.rs  debug_clip.rs  inspect_clip_weights.rs  mmap_arrayview.rs
src/: clip.rs  conv_ops.rs  diffusion.rs  main.rs  types.rs  utils.rs  vae.rs  weights.rs
