[package]
name = "stable-diffusion-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = "0.15"
ndarray-linalg = "0.16"
rand = "0.8"
rand_distr = "0.4"
rand_chacha = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24"
tokenizers = "0.13"
ndarray-stats = "0.5"
half = "2.4"
rayon = "1.7"
wgpu = { version = "0.19", optional = true }
safetensors = "0.4"
memmap2 = "0.9"
reqwest = { version = "0.11", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
indicatif = "0.17"
shellexpand = "3.0"
futures-util = "0.3"

[features]
avx512-bf16 = []
wgpu-backend = ["wgpu"]
